Tidied up the css h1 tag so it can be reused

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -68,7 +68,7 @@
         <div class="card-customisation-wrapper">
           <div class="wrapper-appearance">
             <hr class="solid">
-            <h1 class="h1-appearance">Appearance</h1>
+            <h1 class="h1">Appearance</h1>
             <label for="theme" class="label-subtext">Customize how Make-It-All looks on your device</label>
             <select name="theme" class="theme">
               <option value="light">Light</option>
@@ -77,7 +77,7 @@
           </div>
           <div class="wrapper-password">
             <hr class="solid">
-            <h1 class="h1-password">Password</h1>
+            <h1 class="h1">Password</h1>
             <label for="change-password-btn" class="label-subtext">Change your password to a more memorable one</label>
             <button class="change-password-btn" data-action="change-password">
               <p>Change Password</p>
@@ -85,7 +85,7 @@
           </div>
           <div class="wrapper-email">
             <hr class="solid">
-            <h1 class="h1-email">My Email</h1>
+            <h1 class="h1">My Email</h1>
             <label for="email-box" class="label-subtext">This is your assigned company email</label>
             <label class="email-box">f.batmaz@lboro.ac.uk</label>
           </div>
