User profile page is now basically finished for mobile development

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -88,9 +88,24 @@
             <h1 class="h1">My Email</h1>
             <label for="email-box" class="label-subtext">This is your assigned company email</label>
             <label class="email-box">f.batmaz@lboro.ac.uk</label>
+            <img class="email-lock-img" src="./lock.png" alt="" />
+          </div>
+          <div class="wrapper-invite">
+            <hr class="solid">
+            <h1 class="h1">Invite Others</h1>
+            <label for="invite-btn" class="label-subtext">Invite your co-workers who have not yet signed up</label>
+            <button class="invite-btn" data-action="invite-employee">
+              <p>Invite</p>
+            </button>
+            <hr class="solid">
+          </div>
+          <div class ="wrapper-logout">
+            <button class="logout-btn">
+              <p>Logout</p>
+            </button>
           </div>
 
-          </div>
+
 
         </div>
 
