Fixed api calls for project

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -128,7 +128,7 @@
               alt=""
               class="card-small-image"
             />
-            <p class="card-small-text" id="project-manager">Firat Batmaz</p>
+            <p class="card-small-text" id="project-manager"></p>
           </div>
         </div>
 
