Added JS to update circular progress bar

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -100,12 +100,12 @@
       <section class="topcards-wrapper">
         <div class="card-small">
           <h3 class="title-card-small text-center">Project progress</h3>
-          <div class="spinner-parent" style="--progress:60%; --progress-angle:0.6turn">
+          <div class="spinner-parent" id="progress-bar" style="--progress:60%; --progress-angle:0.6turn">
             <div class="spinner"></div>
             <div class="spinner-end-wrapper"></div>
             <div class="center">
-              <h3>60%</h3>
-              <p>9/15 Tasks complete</p>
+              <h3 id="percentageDone">60%</h3>
+              <p id="tasksDone">9/15 Tasks complete</p>
             </div>
           </div>
         </div>
