--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -102,7 +102,7 @@
     <main>
       <h4>Search</h4>
       <h3>Make-It-All</h3>
-      <form action="search/">
+      <form action="search/" class="search-form">
         <input
           name="q"
           type="text"
