dashboard mobile nav from aside test

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <dialog class="nav-mobile">
+    <!-- <dialog class="nav-mobile">
       <div class="flex-row kanban-title">
         <h2>Menu</h2>
         <button class="btn-icon material-symbols-outlined dialog-close">
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </nav>
-    </dialog>
+    </dialog> -->
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
