Added JS to update members assigned to project

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -194,7 +194,7 @@
           <a href="#">Team 1</a>
         </div> -->
 
-        <div class="project-members-wrap">
+        <div class="project-members-wrap" id="project-members-wrap" >
 
           <div class="card-small bg-accent flex-col-center card-smaller">
             <h3 class="title-card-small">Corcimaru Calin</h3>
