Minor desktop nav fix(es)

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -25,7 +25,7 @@
           <li >
             <a href="/manager/" class="material-symbols-outlined">surfing</a>
           </li>
-          <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
+          <li><a href="/knowledge/" class="material-symbols-outlined">menu_book</a></li>
           <li  data-active>
             <a href="/profile/" class="material-symbols-outlined"
               >manage_accounts</a
