Minor fixed & added js to update team name

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -187,7 +187,7 @@
         
         <div class="card-title-wrapper">
           <h2 class="title-card">Members on this project</h2>
-          <h2> Team 1 </h2>
+          <h2 id="team-name"> </h2>  
         </div>
 
         <!-- <div class="link-list move-right">
@@ -196,7 +196,7 @@
 
         <div class="project-members-wrap" id="project-members-wrap" >
 
-          <div class="card-small bg-accent flex-col-center card-smaller">
+          <!-- <div class="card-small bg-accent flex-col-center card-smaller">
             <h3 class="title-card-small">Corcimaru Calin</h3>
             <img
               src="https://placekitten.com/50/50"
@@ -278,7 +278,7 @@
             <div class="link-list text-center">
               <a href="#">View Employee details</a>
             </div>
-          </div>
+          </div> -->
 
         </div>
         
