Updated client details cards & added grid layout

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -66,7 +66,7 @@
     </aside>
 
     <header class="header">
-      <h1 id="project-id">Client company name</h1>
+      <h1 id="client-name">Client company name</h1>
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
@@ -80,42 +80,49 @@
     </header>
 
     <main>
-      <section class="topcards-wrapper">
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Client representative</h3>
-          <div class="flex-col-center">
-            <img
-              src="https://placekitten.com/50/50"
-              alt=""
-              class="card-small-image"
-            />
-            <p class="card-small-text">Firat Batmaz</p>
-          </div>
-        </div>
+      <section class="card">
+        <h2 class="title-card">Client details</h2>
 
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Contact information</h3>
-          <div class="flex-col-center">
-            <p class="card-small-text card-small-location">
-              Email: email@gmail.com <br />
-              Mobile 1: +4478696969 <br />
-              Mobile 2: +4479420420 <br />
-            </p>
+        <div class="client-details-wrap">
+          <div class="card-small bg-accent card-bigger">
+            <h3 class="title-card-small text-center">Client representative</h3>
+            <div class="flex-col-center">
+              <img
+                src="https://placekitten.com/50/50"
+                alt=""
+                class="card-small-image"
+              />
+              <p class="card-small-text">Firat Batmaz</p>
+            </div>
           </div>
-        </div>
 
-        <div class="card-small">
-          <h3 class="title-card-small text-center">Office location</h3>
-          <div class="flex-col-center">
-            <p class="card-small-text card-small-location">
-              Flat 69, block S <br />
-              The Holt <br />
-              Holt Drive <br />
-              Loughborough <br />
-              LE113JB
-            </p>
-            <div class="link-list text-center">
-              <a href="#">View on Google Maps</a>
+          <div class="card-small bg-accent card-bigger">
+            <h3 class="title-card-small text-center">Office location</h3>
+            <div class="flex-col-center">
+              <p class="card-small-text text-center-positioning">
+                Flat 69, block S <br />
+                The Holt <br />
+                Holt Drive <br />
+                Loughborough <br />
+                LE113JB
+              </p>
+              <div class="link-list text-center">
+                <a href="#">View on Google Maps</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-small bg-accent card-bigger">
+            <h3 class="title-card-small text-center">Contact information</h3>
+            <div class="flex-col-center">
+              <p class="card-small-text text-center-positioning">
+                Email: email@gmail.com <br />
+                Mobile 1: +4478696969 <br />
+                Mobile 2: +4479420420 <br />
+              </p>
+              <div class="link-list text-center">
+                <a href="#">Access website</a>
+              </div>
             </div>
           </div>
         </div>
