--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./script.js"></script>
-
+    <script defer src="../nav.js"></script>
     <title>Dashboard</title>
   </head>
 
