Added intial JS to display client info

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -92,14 +92,35 @@
                 alt=""
                 class="card-small-image"
               />
-              <p class="card-small-text">Firat Batmaz</p>
+              <p class="card-small-text" id="client-representative">
+                Firat Batmaz
+              </p>
+            </div>
+          </div>
+
+          <div class="card-small bg-accent card-bigger">
+            <h3 class="title-card-small text-center">Contact information</h3>
+            <div class="flex-col-center">
+              <p
+                class="card-small-text text-center-positioning"
+                id="client-info"
+              >
+                Mobile 1: +4478696969
+              </p>
+              <div class="link-list text-center">
+                <a href="" id="client-email"> Contact via email</a>
+                <a href="" id="client-web">Access website</a>
+              </div>
             </div>
           </div>
 
           <div class="card-small bg-accent card-bigger">
             <h3 class="title-card-small text-center">Office location</h3>
             <div class="flex-col-center">
-              <p class="card-small-text text-center-positioning">
+              <p
+                class="card-small-text text-center-positioning"
+                id="client-address"
+              >
                 Flat 69, block S <br />
                 The Holt <br />
                 Holt Drive <br />
@@ -108,20 +129,6 @@
               </p>
               <div class="link-list text-center">
                 <a href="#">View on Google Maps</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-small bg-accent card-bigger">
-            <h3 class="title-card-small text-center">Contact information</h3>
-            <div class="flex-col-center">
-              <p class="card-small-text text-center-positioning">
-                Email: email@gmail.com <br />
-                Mobile 1: +4478696969 <br />
-                Mobile 2: +4479420420 <br />
-              </p>
-              <div class="link-list text-center">
-                <a href="#">Access website</a>
               </div>
             </div>
           </div>
