--- a/web/project/index.html
+++ b/web/project/index.html
@@ -92,9 +92,9 @@
 
     <main>
 
-      <p id="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor. 
+      <p id="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Vestibulum lorem sed risus ultricies tristique nulla aliquet enim tortor.
         Sed egestas egestas fringilla phasellus faucibus scelerisque.</p>
 
       <section class="topcards-wrapper">
@@ -128,7 +128,7 @@
               alt=""
               class="card-small-image"
             />
-            <p class="card-small-text" id="project-manager"></p>
+            <p class="card-small-text" id="project-leader"></p>
           </div>
         </div>
 
@@ -184,10 +184,9 @@
       </section>
 
       <section class="card">
-        
+
         <div class="card-title-wrapper">
           <h2 class="title-card">Members on this project</h2>
-          <h2 id="team-name"> </h2>  
         </div>
 
         <!-- <div class="link-list move-right">
@@ -281,7 +280,7 @@
           </div> -->
 
         </div>
-        
+
       </section>
     </main>
 
