user profile pictures and loading logged-in user name n stuff

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -85,8 +85,8 @@
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6 id="username">King Firat</h6>
-          <p class="dimmed">Manager</p>
+          <h6 id="user-name">King Firat</h6>
+          <p id="user-rank" class="dimmed">Manager</p>
         </div>
         <img
           src="https://placekitten.com/50/50"
