got the proper users in the db now

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="../base.css" />
     <link rel="stylesheet" href="./style.css" />
+    <script type="module" src="./script.js"></script>
     <title>Login</title>
   </head>
 
@@ -21,13 +22,7 @@
     <!--add the information for this when functionality is added-->
 
     <div class="wrapper">
-      <form
-        class="login-form"
-        name="loginForm"
-        action=""
-        method="post"
-        onsubmit="return validateForm()"
-      >
+      <form class="login-form" name="loginForm" action="" method="post">
         <label id="title">Member Login</label>
         <label id="subtitle"
           >Welcome to Make-It-All, enter your employee details below to login to
