ability to login

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -95,7 +95,7 @@
           height="50"
         />
         <p class="material-symbols-outlined dimmed">expand_more</p>
-        <p class="material-symbols-outlined dimmed">logout</p>
+        <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
     <main>
