Positioned elements on search results page

--- a/web/knowledge/search/index.html
+++ b/web/knowledge/search/index.html
@@ -100,12 +100,17 @@
     </header>
     <main>
       <section class="search">
-        <input type="text" name="q" placeholder="Search..." class="input" />
+        <input
+          type="text"
+          name="q"
+          placeholder="Search..."
+          class="search-box"
+        />
         <button type="submit" class="btn-action">
           <p>Search</p>
           <span class="material-symbols-outlined">search</span>
         </button>
-        <select name="topic" class="input">
+        <select name="topic" class="dropdown-topic">
           <option value="">Topic</option>
           <option value="1">Technical</option>
           <option value="2">Non-Technical</option>
