--- a/web/manager/index.html
+++ b/web/manager/index.html
@@ -58,9 +58,7 @@
             </a>
           </li>
           <li data-active>
-            <a href="/manager/" class="material-symbols-outlined">
-              surfing
-            </a>
+            <a href="/manager/" class="material-symbols-outlined"> surfing </a>
           </li>
           <li>
             <a href="/knowledge/" class="material-symbols-outlined">
@@ -70,7 +68,7 @@
           <li>
             <a href="/profile/" class="material-symbols-outlined">
               manage_accounts
-              </a>
+            </a>
           </li>
           <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
@@ -95,9 +93,16 @@
       </div>
     </header>
     <main>
-
       <section class="card">
-        <h2 class="title-card">Project Overview</h2>
+        <div class="card-title-wrapper">
+          <h2 class="title-card">Project Overview</h2>
+          <div class="flex-row">
+            <button class="btn-action" data-action="new-project">
+              <p>New Project</p>
+              <span class="material-symbols-outlined">add</span>
+            </button>
+          </div>
+        </div>
         <div class="small-cards-wrapper" id="project-overview-wrapper"></div>
       </section>
 
@@ -106,59 +111,181 @@
         <div class="wrap-grid">
           <!-- (a[href="../profile?id=$"].card-small.bg-accent>img[src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50"]+div.flex-row>h3{Employee $}+p.dimmed{Role}) * 7 -->
           <a href="../profile/?id=1" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 1</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile/?id=2" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 2</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile/?id=3" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 3</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile?id=4" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 4</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile?id=5" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 5</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile?id=6" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 6</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
           <a href="../profile?id=7" class="card-small bg-accent">
-            <img src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
             <div class="flex-row">
               <h3>Employee 7</h3>
               <p class="dimmed">Role</p>
             </div>
           </a>
-
         </div>
       </section>
-
-
-
+      <section class="card">
+        <h2 class="title-card">Employee Overview</h2>
+        <div class="wrap-grid">
+          <!-- (a[href="../profile?id=$"].card-small.bg-accent>img[src="https://placekitten.com/50/50" alt="User Profile Picture" width="50" height="50"]+div.flex-row>h3{Employee $}+p.dimmed{Role}) * 7 -->
+          <a href="../profile/?id=1" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 1</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile/?id=2" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 2</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile/?id=3" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 3</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=4" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 4</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=5" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 5</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=6" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 6</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+          <a href="../profile?id=7" class="card-small bg-accent">
+            <img
+              src="https://placekitten.com/50/50"
+              alt="User Profile Picture"
+              width="50"
+              height="50"
+            />
+            <div class="flex-row">
+              <h3>Employee 7</h3>
+              <p class="dimmed">Role</p>
+            </div>
+          </a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
