login using "test" & "pw"

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -28,6 +28,8 @@
         action="/dashboard/"
         method="get"
       >
+        <h2>USERNAME: test</h2>
+        <h2>PASSWORD: pw</h2>
         <label id="title">Member Login</label>
         <label id="subtitle"
           >Welcome to Make-It-All, enter your employee details below to login to
