--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -99,7 +99,7 @@
       </div>
     </header>
     <main>
-      <section class="card">
+      <section id="kanban" class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">Tasks</h2>
           <div class="flex-row">
