--- a/web/project/index.html
+++ b/web/project/index.html
@@ -93,7 +93,7 @@
         </div>
         <img src="https://placekitten.com/50/50" alt="User Profile Picture" />
         <p class="material-symbols-outlined dimmed">expand_more</p>
-        <p class="material-symbols-outlined dimmed">logout</p>
+        <p id="logout" class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
 
@@ -153,7 +153,7 @@
         </div>
       </section>
 
-      <section class="card">
+      <section id="kanban" class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">Tasks</h2>
           <div class="flex-row">
